--- a/ClientApp/src/app/admin-area/dashboard/dashboard.component.html
+++ b/ClientApp/src/app/admin-area/dashboard/dashboard.component.html
@@ -117,7 +117,7 @@
 
               <div class="info-box-content">
                 <!-- <span class="info-box-text">Inventory</span> -->
-                <span class="info-box-number">Search for Staff by Login ID</span>
+                <span class="info-box-number">Search for User by Login ID</span>
               </div>
               <!-- /.info-box-content -->
             </div>
