--- a/ClientApp/src/app/admin-login/admin-login.component.html
+++ b/ClientApp/src/app/admin-login/admin-login.component.html
@@ -1,6 +1,12 @@
 <div class="login-box">
     <div class="login-logo">
-      <a href="../../index2.html"><b>Admin</b>LTE</a>
+      <a [routerLink]='["/login"]'>
+        <div class="text-center">
+       <img class="rounded"
+            src="/images/nsuk.png"
+            alt="login-logo">
+     </div>
+     </a>
     </div>
     <!-- /.login-logo -->
     <div class="card">
@@ -46,9 +52,9 @@
         <!-- <p class="mb-1">
           <a href="#">I forgot my password</a>
         </p> -->
-        <p class="mb-0">
+        <!-- <p class="mb-0">
           <a [routerLink]='["/register"]' class="text-center">Register a new membership</a>
-        </p>
+        </p> -->
       </div>
       <!-- /.login-card-body -->
     </div>
