--- a/ClientApp/src/app/admin-area/edit-admin/edit-admin.component.html
+++ b/ClientApp/src/app/admin-area/edit-admin/edit-admin.component.html
@@ -7,10 +7,10 @@
       
         <div class="card">
           <div class="card-body register-card-body">
-            <p class="login-box-msg"><b>Register new Admin</b></p>
+            <p class="login-box-msg"><b>Edit Admin Record</b></p>
       
-            <form name="form" (ngSubmit)="register(f)" #f="ngForm" novalidate>
-
+            <form name="form" (ngSubmit)="onUpdate(f)" #f="ngForm" novalidate>
+              <input  type="hidden" name="id" #id="ngModel" [(ngModel)]="model.id"  >
               <div class="input-group mb-3">
                   <input type="text" class="form-control" name="firstName" [(ngModel)]="model.firstName" required #firstName="ngModel" placeholder="FirstName">
                   <div class="input-group-append">
@@ -63,14 +63,7 @@
                   </div>
                 </div>
               </div>
-              <div class="input-group mb-3">
-                  <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" placeholder="Password" required />
-                <div class="input-group-append">
-                  <div class="input-group-text">
-                    <span class="fas fa-lock"></span>
-                  </div>
-                </div>
-              </div>
+             
               <!-- <div class="input-group mb-3">
                 <input type="password" class="form-control" placeholder="Retype password">
                 <div class="input-group-append">
@@ -81,7 +74,7 @@
               </div> -->
               <div class="row">
                 <div class="col-12">
-                  <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
+                  <button type="submit" class="btn btn-primary btn-block btn-flat">Update</button>
                 </div>
                 <!-- /.col -->
               </div>
