--- a/ClientApp/src/app/admin-area/users/users.component.html
+++ b/ClientApp/src/app/admin-area/users/users.component.html
@@ -19,7 +19,7 @@
             </i>
             View
           </a>
-          <a [routerLink]="['', user.id]" class="btn btn-info btn-sm" >
+          <a [routerLink]="['/EditUser', user.id]" class="btn btn-info btn-sm" >
             <i class="fas fa-pencil-alt">
             </i>
             Edit
