--- a/ClientApp/src/app/staff-area/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/staff-area/nav-menu/nav-menu.component.html
@@ -12,12 +12,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link"  >Home <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
       <ul class="navbar-nav ml-auto">
-      
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]='["/staff/profile"]'><b>Hello! {{person.username}}</b></a>
+        </li>
         <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link" *ngIf="!auth.isAuthenticated()" [routerLink]='["/login"]' (click)='collapse()'>
               <i class="nav-icon fa fa-sign-in-alt"></i> LOGIN
