--- a/ClientApp/src/app/staff-area/profile/profile.component.html
+++ b/ClientApp/src/app/staff-area/profile/profile.component.html
@@ -1,68 +1,45 @@
 
 <div style="margin-top: 40px;" class="row"  >
-    <div class="col-md-4 col-md-offset-4">
-       
-       <div class="panel panel-primary">
-           <div class="panel-heading">
-            <h4 style="text-align:center; font-weight:bolder;">Profile</h4>
-           </div>
-           <div style="background: #4189C7;" class="panel-body"> 
-                 <table class="table table-hover">
-                     <thead>
-                         <tr>
-                             <th>LoginId</th>
-                             <th>{{person.loginid}}</th>
-                         </tr>
-                     </thead>
-                     <thead>
-                        <tr>
-                            <th>Email</th>
-                            <th>{{person.email}}</th>
-                        </tr>
-                    </thead>
-                    <thead>
-                        <tr>
-                            <th>Username</th>
-                            <th>{{person.username}}</th>
-                        </tr>
-                    </thead>
-                    <thead>
-                        <tr>
-                            <th>Phone</th>
-                            <th>{{person.phone}}</th>
-                        </tr>
-                    </thead>
-                    <thead>
-                        <tr>
-                            <th>City</th>
-                            <th>{{person.city}}</th>
-                        </tr>
-                    </thead>
-                    <thead>
-                        <tr>
-                            <th>Address</th>
-                            <th>{{person.address}}</th>
-                        </tr>
-                    </thead>
-                    <thead>
-                        <tr>
-                            <th>Score</th>
-                            <th>{{person.score}}</th>
-                        </tr>
-                    </thead>
-                    <thead>
-                        <tr>
-                            <th>TimeSpent</th>
-                            <th>{{person.timeSpent}} Seconds</th>
-                        </tr>
-                    </thead>
-                     
-                 </table>   
-            
-           </div>
-         </div>
- 
+    <div class="col-md-4 offset-md-4">
+  
+       <!-- Profile Image -->
+       <div class="card card-primary card-outline">
+          <div class="card-body box-profile">
+            <div class="text-center">
+              <img class="profile-user-img img-fluid img-circle"
+                   src="/images/avatar.jpg"
+                   alt="User profile picture">
+            </div>
+            <ul class="list-group list-group-unbordered mb-3">
+              <li class="list-group-item">
+                <b>Login ID</b> <b class="float-right">{{person.loginid}}</b>
+              </li>
+              <li class="list-group-item">
+                <b>Username</b> <b class="float-right">{{person.username}}</b>
+              </li>
+              <li class="list-group-item">
+                <b>Email</b> <b class="float-right">{{person.email}}</b>
+              </li>
+              <li class="list-group-item">
+                  <b>Phone</b> <b class="float-right">{{person.phone}}</b>
+                </li>
+              <li class="list-group-item">
+                <b>Sex</b> <b class="float-right">{{person.sex.name}}</b>
+              </li>
+              <li *ngIf="person.score" class="list-group-item">
+                <b>Score</b> <b class="float-right">{{person.score}}</b>
+              </li>
+            <li *ngIf="person.timeSpent" class="list-group-item">
+              <b>Time Spent</b> <b class="float-right">{{person.timeSpent}} Seconds</b>
+            </li>
+            </ul>
+          </div>
+          <!-- /.card-body -->
+        </div>
+        <!-- /.card -->
+      
     
- 
+  
     </div>
- </div>
+  </div>
+  
